 * #686: Add fish shell completion script so you can tab-complete on the borgmatic command-line. See
   the documentation for more information:
   https://torsion.org/borgmatic/docs/how-to/set-up-backups/#shell-completion
 * #687: Fix borgmatic error when not finding the configuration schema for certain "pip install
   --editable" development installs.
 * Run "borgmatic borg" action without capturing output so interactive prompts and flags like
   "--progress" still work.

1.7.12
 * #413: Add "log_file" context to command hooks so your scripts can consume the borgmatic log file.
   See the documentation for more information:
   https://torsion.org/borgmatic/docs/how-to/add-preparation-and-cleanup-steps-to-backups/
 * #666, #670: Fix error when running the "info" action with the "--match-archives" or "--archive"
   flags. Also fix the "--match-archives"/"--archive" flags to correctly override the
   "match_archives" configuration option for the "transfer", "list", "rlist", and "info" actions.
 * #668: Fix error when running the "prune" action with both "archive_name_format" and "prefix"
   options set.
 * #672: Selectively shallow merge certain mappings or sequences when including configuration files.
   See the documentation for more information:
   https://torsion.org/borgmatic/docs/how-to/make-per-application-backups/#shallow-merge
 * #672: Selectively omit list values when including configuration files. See the documentation for
   more information:
   https://torsion.org/borgmatic/docs/how-to/make-per-application-backups/#list-merge
 * #673: View the results of configuration file merging via "validate-borgmatic-config --show" flag.
   See the documentation for more information:
   https://torsion.org/borgmatic/docs/how-to/make-per-application-backups/#debugging-includes
 * Add optional support for running end-to-end tests and building documentation with rootless Podman
   instead of Docker.

1.7.11